fix wrong padding-left value for the image

--- a/packages/volto/theme/themes/pastanaga/extras/blocks.less
+++ b/packages/volto/theme/themes/pastanaga/extras/blocks.less
@@ -303,7 +303,7 @@ body.has-toolbar.has-sidebar-collapsed .ui.wrapper > .ui.inner.block.full {
       &.has-sidebar-collapsed {
         .block.align.full img {
           width: calc(100vw - 50px) !important;
-          padding-left: 51px;
+          padding-left: 50px;
         }
       }
     }
